k8s/apps/web/rbtherapy/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app rbtherapy
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      imagePullSecrets:
        - name: forgejo-image-pull
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: rbtherapy
          image: git.cbannister.xyz/rocio/therapy:main@sha256:90e6767f243065f38c585299d972f7d2e1f10fd45307e98eaa747a5930119db6
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet: &probe
              path: /healthz
              port: http
            failureThreshold: 30
            periodSeconds: 2
          readinessProbe:
            httpGet: *probe
            periodSeconds: 10
            timeoutSeconds: 2
          livenessProbe:
            httpGet: *probe
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 16Mi
