k8s/apps/web/rbtherapy/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rbtherapy
spec:
  selector:
    app.kubernetes.io/name: rbtherapy
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
