k8s/apps/web/rbtherapy/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rbtherapy
spec:
  hostnames:
    - www.rociobolanos.com
  parentRefs:
    - name: external-rociobolanos-com
      namespace: network
      kind: ListenerSet
      sectionName: https
  rules:
    - backendRefs:
        - name: rbtherapy
          port: 80
